--- a/docroot/css/main.css
+++ b/docroot/css/main.css
@@ -123,7 +123,75 @@ a.dataTableCentered{
 }
 
 div.westpanel div.ui-widget-content .waveformTree{
-	width: 100%;
-	height: 140px;
+	width: 99%;
+	height: 440px;
 	overflow: auto;
+}
+
+td.queuePhaseColumn span , div.summary span, div.summary ul, td.recordName div, td.recordName span{
+	float:left
+}
+
+td.queuePhaseColumn a , div.summary a{
+	float:right;
+}
+
+td.queuePhaseColumn .DONE{
+	font-weight: bold!important;
+	color: green;
+}
+td.queuePhaseColumn span.DONE a:link {text-decoration: none;color: green;}
+td.queuePhaseColumn span.DONE a:active {text-decoration: none;color: green;}
+td.queuePhaseColumn span.DONE a:visited {text-decoration: none;color: green;}
+td.queuePhaseColumn span.DONE a:hover {text-decoration: underline;color: green;}
+
+td.queuePhaseColumn .ERROR{
+	font-weight: bold!important;
+	color: red;
+}
+td.queuePhaseColumn span.ERROR a:link {text-decoration: none;color: red;}
+td.queuePhaseColumn span.ERROR a:active {text-decoration: none;color: red;}
+td.queuePhaseColumn span.ERROR a:visited {text-decoration: none;color: red;}
+td.queuePhaseColumn span.ERROR a:hover {text-decoration: underline;color: red;}
+
+td.queuePhaseColumn .WARN{
+	font-weight: bold!important;
+	color: rgb(243, 206, 12);
+}
+td.queuePhaseColumn span.WARN a:link {text-decoration: none;color: rgb(243, 206, 12);}
+td.queuePhaseColumn span.WARN a:active {text-decoration: none;color: rgb(243, 206, 12);}
+td.queuePhaseColumn span.WARN a:visited {text-decoration: none;color: rgb(243, 206, 12);}
+td.queuePhaseColumn span.WARN a:hover {text-decoration: underline;color: rgb(243, 206, 12);}
+
+span.panelHeaderText{
+	position: absolute;
+	padding: 0.4em 0.2em 0.4em 0.4em;
+	left: 0;
+}
+
+
+div.ui-dialog-content{
+	text-align: center;
+}
+
+img.transferFileMessage{
+	width: 50px;
+	margin-top: 10px;
+	position: absolute;
+	left: 64px;
+}
+
+span.transferFileMessage{
+	position: relative;
+	top: 75px;
+}
+
+div.principalHeader{
+	text-align: right;
+	margin-bottom: 2px;
+	position: relative;
+}
+
+backgroundQueueTable{
+	width: 100%;
 }
