--- a/docroot/views/view.xhtml
+++ b/docroot/views/view.xhtml
@@ -79,6 +79,14 @@
 								<h:outputText value="#{node}"/>
 							</p:treeNode>
 							
+							<p:treeNode type="eureka" icon="ui-icon-lightbulb">
+								<h:outputText value="#{node}"/>
+							</p:treeNode>
+							
+							<p:treeNode type="home" icon="ui-icon-home">
+								<h:outputText value="#{node}"/>
+							</p:treeNode>
+							
 						</p:tree>
 
 						<h:panelGroup layout="block">
